--- a/Pagina/Pantallas/inicio.html
+++ b/Pagina/Pantallas/inicio.html
@@ -3,73 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar ACTC</title>
+    <title>Inicio ACTC</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-    <nav class="navbar">
-        <div class="logo">
-            <img src="./Recursos/LOGO.png" alt="Logo ACTC">
-        </div>
-        <ul class="nav-links">
-            <li><a href="inicio.html">INICIO</a></li>
-            <li><a href="campeonato.html">CAMPEONATO</a></li>
-            <li><a href="calendario.html">CALENDARIO</a></li>
-            <li><a href="registro.html">REGISTRO</a></li>
-        </ul>
-    </nav>
+<nav class="navbar">
+    <div class="logo">
+        <img src="./Recursos/LOGO.png" alt="Logo ACTC">
+    </div>
+    <ul class="enlaces">
+        <li><a href="inicio.html" class="activo">INICIO</a></li>
+        <li><a href="campeonato.html">CAMPEONATO</a></li>
+        <li><a href="calendario.html">CALENDARIO</a></li>
+        <li><a href="registro.html">REGISTRO</a></li>
+    </ul>
+</nav>
 
-    <main class="hero-wrap">
-    <section class="hero-card">
-        <div class="hero-img">
-            <!-- usá tu imagen; si querés la misma de registro: img/actc-carrera.png -->
-            <img src="Recursos/INICIO.jpg" alt="Imagen descriptiva ACTC">
-        </div>
-
-    <div class="hero-text">
-        <h1 class="sr-only">ACTC Inicio</h1>
-        <p class="breve-texto">
-            La Asociación Corredores de Turismo Carretera (ACTC) organiza y fiscaliza el
-            Turismo Carretera y sus divisionales, llevando la pasión del automovilismo a
-            los principales autódromos del país.
-        </p>
-        <p class="breve-texto">
-            Con un calendario federal, transmisión en vivo y programas de formación,
-            la ACTC promueve competitividad, seguridad y el desarrollo de nuevos talentos.
-        </p>
-
-        <div class="redes">
-            <h2>Seguinos en nuestras redes</h2>
-            <div class="redes-icons">
-            <!-- Instagram -->
-            <a class="icon-btn" href="https://www.instagram.com/actcargentina/" target="_blank" rel="noopener noreferrer" aria-label="Instagram ACTC">
-                <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7zm11 2.8a1.2 1.2 0 1 1 0 2.4 1.2 1.2 0 0 1 0-2.4zM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6z"/></svg>
-                <span>Instagram</span>
-            </a>
-            <!-- YouTube -->
-            <a class="icon-btn" href="https://www.youtube.com/user/actcargentina" target="_blank" rel="noopener noreferrer" aria-label="YouTube ACTC">
-                <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M23.5 6.2a3.1 3.1 0 0 0-2.2-2.2C19.4 3.5 12 3.5 12 3.5s-7.4 0-9.3.5A3.1 3.1 0 0 0 .5 6.2C0 8.1 0 12 0 12s0 3.9.5 5.8a3.1 3.1 0 0 0 2.2 2.2c1.9.5 9.3.5 9.3.5s7.4 0 9.3-.5a3.1 3.1 0 0 0 2.2-2.2c.5-1.9.5-5.8.5-5.8s0-3.9-.5-5.8zM9.6 15.5v-7L15.9 12 9.6 15.5z"/></svg>
-                <span>YouTube</span>
-            </a>
-            <!-- Web -->
-            <a class="icon-btn" href="https://actc.org.ar/" target="_blank" rel="noopener noreferrer" aria-label="Sitio oficial ACTC">
-                <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2a10 10 0 1 0 0 20A10 10 0 0 0 12 2zm7.9 9h-3.1a15.5 15.5 0 0 0-1.1-5 8 8 0 0 1 4.2 5zM12 4c.9 1.2 2 3.5 2.3 7H9.7C10 7.5 11.1 5.2 12 4zM5.2 16a7.9 7.9 0 0 1 0-8h3a18.7 18.7 0 0 0 0 8h-3zm1.6 2h2.9c.4 2 1.1 3.6 2.3 5a8 8 0 0 1-5.2-5zm5.2 5c-.9-1.2-2-3.5-2.3-7h4.6c-.3 3.5-1.4 5.8-2.3 7zM18.8 16h-3a18.7 18.7 0 0 0 0-8h3a7.9 7.9 0 0 1 0 8zM12 20c.9-1.2 2-3.5 2.3-7h2.9a8 8 0 0 1-5.2 7zM7.3 6A18.7 18.7 0 0 0 6.4 11H3.3A8 8 0 0 1 7.3 6z"/></svg>
-                <span>Web</span>
-            </a>
+<main class="fondo">
+    <section class="caja-superior">
+        <div class="recuadro">
+            <img src="Recursos/INICIO.jpg" alt="Imagen ACTC">
+        </div>    
+        <div class="texto">
+            <h1 class="titulo">ACTC Inicio</h1>
+            <p class="parrafo">La Asociación Corredores de Turismo Carretera (ACTC) organiza y fiscaliza el Turismo Carretera y sus divisionales en los principales autódromos del país.</p>
+            <p class="parrafo">Con un calendario federal, transmisión en vivo y programas de formación, la ACTC promueve competitividad, seguridad y el desarrollo de nuevos talentos.</p>    
+            <div class="redes">
+                <h2 class="sub">Seguinos en nuestras redes</h2>
+                <div class="iconos">
+                    <a class="boton-icono" href="https://www.instagram.com/actcargentina/">
+                    <img src="../Pantallas/Recursos/insta.svg">
+                    <a class="boton-icono" href="https://www.youtube.com/user/actcargentina">
+                    <img src="../Pantallas/Recursos/youtube.svg">
+                    <a class="boton-icono" href="https://actc.org.ar/">
+                    <img src="../Pantallas/Recursos/web.svg">
+                </div>
             </div>
         </div>
-    </div>
     </section>
 </main>
 
-    <!-- Footer -->
-<footer class="footer">
-    <div class="footer-container">
-        <div class="footer-logo">
-            <img src="./Recursos/marcas/logoactc.png" alt="ACTC Logo">
-        </div>
-        <div class="footer-links">
+<footer class="pie">
+    <div class="pie-contenedor">
+        <div class="pie-logo"><img src="./Recursos/marcas/logoactc.png" alt="ACTC"></div>
+        <div class="pie-links">
             <h3>TC</h3>
             <ul>
                 <li><a href="./inicio.html">Inicio</a></li>
@@ -78,18 +56,16 @@
                 <li><a href="./registro.html">Registro</a></li>
             </ul>
         </div>
-        <div class="footer-social">
+        <div class="pie-redes">
             <h3>Seguinos</h3>
-            <div class="social-icons">
+            <div class="redes-iconos">
                 <a href="https://www.instagram.com/actcargentina"><img src="ruta/a/instagram.png" alt="Instagram"></a>
                 <a href="https://www.youtube.com/@actcargentina"><img src="ruta/a/youtube.png" alt="YouTube"></a>
                 <a href="https://actc.org.ar/tc/index.html"><img src="ruta/a/web.png" alt="Web"></a>
             </div>
         </div>
     </div>
-    <div class="footer-bottom">
-        <p>© 2025 ACTC. Todos los derechos reservados.</p>
-    </div>
+    <div class="pie-bottom">© 2025 ACTC. Todos los derechos reservados.</div>
 </footer>
 </body>
 </html>
